make position fixed and update style on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -190,12 +190,12 @@ body button:focus {
   background-color: var(--brand-white) !important;
 }
 
-.bx--toast-notification{
-  position: absolute;
+.bx--toast-notification {
+  position: fixed;
   z-index: 1001;
   top: 0;
   left: 0;
-  width: 50vw !important;
+  width: 100vw !important;
 }
 
 .bx--toast-notification__caption{
@@ -204,4 +204,10 @@ body button:focus {
 
 .bx--toast-notification__subtitle, .bx--toast-notification__title{
   text-align: left;
+}
+
+@media (min-width: 640px) {
+  .bx--toast-notification {
+    width: 50vw !important;;
+  }
 }
